--- a/Nop.Plugin.Payments.AliPay/Nop.Plugin.Payments.AliPay.csproj
+++ b/Nop.Plugin.Payments.AliPay/Nop.Plugin.Payments.AliPay.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <Copyright>Copyright © Nop Solutions, Ltd</Copyright> 
     <Company>Nop Solutions, Ltd</Company> 
     <Authors>Nop Solutions, Ltd</Authors> 
-    <Version>1.30</Version> 
-    <Description>This payment module allows you to integrate with AliPay, payment module</Description> 
     <PackageLicenseUrl></PackageLicenseUrl> 
     <PackageProjectUrl>http://www.nopcommerce.com/p/963/alipay-payment-module-china.aspx</PackageProjectUrl> 
     <RepositoryUrl>https://github.com/nopSolutions/alipay-plugin-for-nopcommerce</RepositoryUrl> 
